# time-series-forecaster

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_main.py
