[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-forecaster"
version = "1.0.0"
description = "Financial time-series forecasting library combining LSTM, Prophet, and XGBoost models."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
